<resources>
    <string name="app_name">LibraryApp</string>
    <string name="hint_username">Kullanıcı Adı</string>
    <string name="giris_txt">Giriş Yapma Ekranına HOŞGELDİNİZ</string>
    <string name="kayit_txt">Kayıt Olma Ekranına HOŞGELDİNİZ</string>
    <string name="hint_password">Şifre</string>
    <string name="hint_passwordConfirm">Şifre Onaylama</string>
    <string name="buton_giris">Giriş Yap</string>
    <string name="buton_kayitOl">Kayıt Ol</string>
    <string name="buton_kayit">Hesabınız mı yok? <b>Hemen kayıt olun</b> </string>
    <string name="kitaplar">Kitaplar</string>
    <string name="kitap_ayrinti">Ayrıntılar</string>
    <string name="favoriler">Favoriler</string>
    <string name="kitap_ara_txt">Arama yapmak istediğiniz kitabın adını giriniz.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>