<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/arkaplan">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:weightSum="160">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="100"
                app:srcCompat="@drawable/login">
            </ImageView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="45dp"
                    android:layout_marginBottom="50dp"
                    android:gravity="center"
                    android:text="GİRİŞ YAPMA EKRANINA HOŞGELDİNİZ"
                    android:textSize="20dp"
                    android:textColor="@color/yesil">

                </TextView>
            </RelativeLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@color/yesil"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:autofillHints="name"
                    android:background="@color/arkaplanacik"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_username"
                    android:imeOptions="actionNext"
                    android:minWidth="320dp"
                    android:minHeight="50dp"
                    android:singleLine="true">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@color/yesil"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    >
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/password"
                        android:layout_gravity="center"
                        android:background="@color/arkaplanacik"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="50dp"
                        >
                    </EditText>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/giris_btn"
                style="@style/girisbutonu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/buton_giris"
                >
            </Button>
            <Button
                android:id="@+id/kayitol_btn"
                style="@style/kayitbutonu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/buton_kayit"
                >
            </Button>
        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>